orchestration/04-expert/01-test-mutation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mutated-pod
  labels:
    app: mutation-test
spec:
  containers:
    - name: nginx
      image: nginx:1.21
      ports:
        - containerPort: 80
      # The mutating webhook should add resource limits if they're missing
