orchestration/04-expert/04-test-allow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theallowed
  labels:
    app: theallowed
    environment: staging
spec:
  selector:
    matchLabels:
      app: theallowed
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: theallowed
      labels:
        app: theallowed
    spec:
      containers:
        - name: theallowed
          image: nginx:latest
          imagePullPolicy:
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
              name: theallowed
