orchestration/04-expert/01-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-policy-validating-webhook
  annotations:
    cert-manager.io/inject-ca-from: webhook-demo/webhook-server-tls
webhooks:
  - name: validate.webhook-demo.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: webhook-demo
        name: webhook-server
        path: /validate-pods
        port: 443
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-policy-mutating-webhook
  annotations:
    cert-manager.io/inject-ca-from: webhook-demo/webhook-server-tls
webhooks:
  - name: mutate.webhook-demo.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: webhook-demo
        name: webhook-server
        path: /mutate-pods
        port: 443
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Ignore
